# BMSTU-University

./: README.md
Algorythms and data structures/: README.md  bmall.c  bubblesort.c  circbuf.c  cluster.c  concat.c  csort.c  datesort.c  disparray.c  dsort.c  fibstr.c  fibsys.c  hsort.c  intersect.cpp  kmpall.c  listbsort.c  maxarray.c  maxk.c  maxprod.c  merge.c  mergesort.c  mulmod.c  number_guessing_game.c  permut.c  polynom.c  ptrie.c  qmax.c  quicksort.c  radixsort.c  rangegcd.c  rangemax.c  rangepeak.c  revarray.c  searchlist.c  shellsort.c  stackmachine.c  strdiff.c  wcount.c
ComputerNetworks/: README.md  go.mod  go.sum
ComputerNetworks/LabaSeti11/: form3.html  get_data_from_block.go  get_data_from_transaction.go  get_last_block.go  go.mod  go.sum  projectdb-13752-firebase-adminsdk-wn56m-cec0962b72.json
ComputerNetworks/LabaSeti8/: go.mod  go.sum
ComputerNetworks/LabaSeti8/java/: Hello.java
ComputerNetworks/LabaSeti8/src/golang/client/: client.go
ComputerNetworks/LabaSeti8/src/golang/server/: server.go
ComputerNetworks/LabaSeti8/src/golang/web-server/: web-server.go
ComputerNetworks/LabaSeti9/: go.mod  go.sum  task1.go
ComputerNetworks/LabaSeti9/ser/: sever.go
ComputerNetworks/LabaSeti9/ssh/: serverasin.go
ComputerNetworks/LabaSeti9/templates/: async.html  sync.html
ComputerNetworks/lab10/: form3.html  go.mod  go.sum  task1.go  task2.go  task2_rss.go  task3.go  webserver.go
DiscreteMaths/: README.md
NumericalMethods/: pom.xml
NumericalMethods/src/main/java/Compilers/lab3/: Lab3.java
NumericalMethods/src/main/java/Compilers/lab3/utils/: Position.java  SyntaxError.java  Tag.java  Token.java
NumericalMethods/src/main/java/lab1/: Lab1.java  MyEnum.java  Test.java
NumericalMethods/src/main/java/lab2/: Splines.java
NumericalMethods/src/main/java/lab3/: MethodComparison.java
NumericalMethods/src/main/java/lab5/: DifferentialEquationSolution.java
NumericalMethods/src/main/java/lab6/: Lab6.java
NumericalMethods/src/main/java/lab7/: Lab7.java
NumericalMethods/src/main/java/lab8_extra/: Lab8.java
Object-functioned programming/src/lab1/: Lab1.scala
Object-functioned programming/src/lab2/: Lab2.scala
Object-functioned programming/src/lab3/: Lab3.scala
TFLLab2/: pom.xml
TFLLab2/Lab2/src/main/java/optimization/entity/parse/: Parser.java
TFLLab2/Lab2/src/main/java/optimization/utils/: DSTR.java
TFLLab2/Lab2/src/main/resources/: results.txt
TheoryOfFormalLanguages/TFLLab2/Lab2/src/main/java/fuzz/: ResultsOfComparativeParsing.java
TheoryOfFormalLanguages/TFLLab2/Lab2/src/main/java/optimization/: OptimizationService.java
TheoryOfFormalLanguages/TFLLab2/Lab2/src/main/java/optimization/entity/: Tree.java
TheoryOfFormalLanguages/TFLLab2/Lab2/src/main/java/optimization/entity/parse/: IterLexeme.java  Lexeme.java  ParseRegex.java
TheoryOfFormalLanguages/TFLLab2/Lab2/src/main/java/optimization/utils/: ACI.java  SSNF.java
TheoryOfFormalLanguages/TFLLab2Null/src/main/resources/: inputAutomata.txt
TheoryOfFormalLanguages/TFLLab4/src/main/java/org/example/: Application.java
TheoryOfFormalLanguages/TFLLab4/src/main/java/utils/grammar/: Grammar.java
TheoryOfFormalLanguages/TFLLab4/src/main/resources/: input.txt
untitled4/: CMakeLists.txt  binsearch.c  extstop.c  frame.c  lexavl.c  listisort.c  peak.c  power2.c  prefixes.c  primediv.c  pword.c  qsstack.c  rangehd.c  ranklist.c  ranktree.c  saddlepoint.c  superstr.c  training.c  zeroxor.c
