cmake_minimum_required(VERSION 3.0)
project(myHomework1.1 C)
set(CMAKE_C_STANDARD 99)
add_executable(myHomework1.1 polynom.c cmake-build-debug)

project(myHomework1.2 C)
set(CMAKE_C_STANDARD 99)
add_executable(myHomework1.2 mulmod.c cmake-build-debug)

project(myHomework1.3 C)
set(CMAKE_C_STANDARD 99)
add_executable(myHomework1.3 fibsys.c cmake-build-debug)

project(myHomework1.4 C)
set(CMAKE_C_STANDARD 99)
add_executable(myHomework1.4 intersect.cpp cmake-build-debug)

project(myHomework1.5 C)
set(CMAKE_C_STANDARD 99)
add_executable(myHomework1.5 permut.c cmake-build-debug)

project(myHomework1.6 C)
set(CMAKE_C_STANDARD 99)
add_executable(myHomework1.6 primediv.c cmake-build-debug)

project(myHomework1.7 C)
set(CMAKE_C_STANDARD 99)
add_executable(myHomework1.7 maxk.c cmake-build-debug)


project(HP C)
set(CMAKE_C_STANDARD 99)
add_executable(HP number_guessing_game.c cmake-build-debug stackmachine.c)

project(Train C)
set(CMAKE_C_STANDARD 99)
add_executable(Train training.c cmake-build-debug)

project(myHomework1.8 C)
set(CMAKE_C_STANDARD 99)
add_executable(myHomework1.8 saddlepoint.c cmake-build-debug)

project(myHomework1.9 C)
set(CMAKE_C_STANDARD 99)
add_executable(myHomework1.9 revarray.c cmake-build-debug)

project(myHomework1.12 C)
set(CMAKE_C_STANDARD 11)
add_executable(myHomework1.12 peak.c cmake-build-debug)

project(myHomework1.13 C)
set(CMAKE_C_STANDARD 99)
add_executable(myHomework1.13 concat.c cmake-build-debug)

project(myHomework1.14 C)
set(CMAKE_C_STANDARD 99)
add_executable(myHomework1.14 wcount.c cmake-build-debug)

project(myHomework1.11 C)
set(CMAKE_C_STANDARD 11)
add_executable(myHomework1.11 binsearch.c cmake-build-debug)

project(myHomework1.15 C)
set(CMAKE_C_STANDARD 11)
add_executable(myHomework1.15 fibstr.c cmake-build-debug)

project(myHomework1.17.1 C)
set(CMAKE_C_STANDARD 11)
add_executable(myHomework1.17.1 frame.c cmake-build-debug)

project(myHomework1.16 C)
set(CMAKE_C_STANDARD 11)
add_executable(myHomework1.16 strdiff.c cmake-build-debug)

project(myHomework1.18 C)
set(CMAKE_C_STANDARD 11)
add_executable(myHomework1.18 searchlist.c cmake-build-debug)

project(myHomework1.20 C)
set(CMAKE_C_STANDARD 11)
add_executable(myHomework1.20 maxarray.c cmake-build-debug)

project(myHomework2.1 C)
set(CMAKE_C_STANDARD 11)
add_executable(myHomework2.1 superstr.c cmake-build-debug)

project(myHomework2.2 C)
set(CMAKE_C_STANDARD 11)
add_executable(myHomework2.2 power2.c cmake-build-debug)

project(myHomework2.3 C)
set(CMAKE_C_STANDARD 11)
add_executable(myHomework2.3 bubblesort.c cmake-build-debug)

project(myHomework2.4 C)
set(CMAKE_C_STANDARD 11)
add_executable(myHomework2.4 shellsort.c cmake-build-debug)

project(myHomework2.5 C)
set(CMAKE_C_STANDARD 11)
add_executable(myHomework2.5 csort.c cmake-build-debug)

project(myHomework2.6 C)
set(CMAKE_C_STANDARD 11)
add_executable(myHomework2.6 hsort.c cmake-build-debug)

project(myHomework2.7 C)
set(CMAKE_C_STANDARD 11)
add_executable(myHomework2.7 mergesort.c cmake-build-debug)

project(myHomework2.8 C)
set(CMAKE_C_STANDARD 11)
add_executable(myHomework2.8 quicksort.c cmake-build-debug)

project(myHomework2.9 C)
set(CMAKE_C_STANDARD 11)
add_executable(myHomework2.9 dsort.c cmake-build-debug)

project(myHomework2.10 C)
set(CMAKE_C_STANDARD 11)
add_executable(myHomework2.10 datesort.c cmake-build-debug)

project(myHomework2.11 C)
set(CMAKE_C_STANDARD 11)
add_executable(myHomework2.11 radixsort.c cmake-build-debug)

project(myHomework2.12 C)
set(CMAKE_C_STANDARD 11)
add_executable(myHomework2.12 prefixes.c cmake-build-debug)

project(myHomework2.13 C)
set(CMAKE_C_STANDARD 11)
add_executable(myHomework2.13 kmpall.c cmake-build-debug)

project(myHomework2.14 C)
set(CMAKE_C_STANDARD 11)
add_executable(myHomework2.14 extstop.c cmake-build-debug)

project(myHomework2.15 C)
set(CMAKE_C_STANDARD 11)
add_executable(myHomework2.15 bmall.c cmake-build-debug)

project(myHomework2.16 C)
set(CMAKE_C_STANDARD 11)
add_executable(myHomework2.16 pword.c cmake-build-debug)

project(myHomework2.17 C)
set(CMAKE_C_STANDARD 11)
add_executable(myHomework2.17 rangemax.c cmake-build-debug)

project(myHomework2.18 C)
set(CMAKE_C_STANDARD 11)
add_executable(myHomework2.18 rangehd.c cmake-build-debug)

project(myHomework2.19 C)
set(CMAKE_C_STANDARD 11)
add_executable(myHomework2.19 rangepeak.c cmake-build-debug)

project(myHomework2.20 C)
set(CMAKE_C_STANDARD 11)
add_executable(myHomework2.20 rangegcd.c cmake-build-debug)

project(myHomework2.21 C)
set(CMAKE_C_STANDARD 11)
add_executable(myHomework2.21 maxprod.c cmake-build-debug)

project(myHomework3.1 C)
set(CMAKE_C_STANDARD 11)
add_executable(myHomework3.1 qsstack.c cmake-build-debug)

project(myHomework3.2 C)
set(CMAKE_C_STANDARD 11)
add_executable(myHomework3.2 stackmachine.c cmake-build-debug)

project(myHomework3.3 C)
set(CMAKE_C_STANDARD 11)
add_executable(myHomework3.3 circbuf.c cmake-build-debug)

project(myHomework3.5 C)
set(CMAKE_C_STANDARD 11)
add_executable(myHomework3.5 cluster.c cmake-build-debug)

project(myHomework3.4.1 C)
set(CMAKE_C_STANDARD 11)
add_executable(myHomework3.4.1 qmax.c cmake-build-debug)

project(myHomework3.4 C)
set(CMAKE_C_STANDARD 11)
add_executable(myHomework3.4 merge.c cmake-build-debug)

project(myHomework3.7 C)
set(CMAKE_C_STANDARD 11)
add_executable(myHomework3.7 listbsort.c cmake-build-debug)

project(myHomework3.8 C)
set(CMAKE_C_STANDARD 11)
add_executable(myHomework3.8 lexavl.c cmake-build-debug)

project(myHomework3.9 C)
set(CMAKE_C_STANDARD 11)
add_executable(myHomework3.9 ranktree.c cmake-build-debug)

project(myHomework3.10 C)
set(CMAKE_C_STANDARD 11)
add_executable(myHomework3.10 ranklist.c cmake-build-debug)

project(myHomework3.11 C)
set(CMAKE_C_STANDARD 11)
add_executable(myHomework3.11 disparray.c cmake-build-debug)

project(myHomework3.12 C)
set(CMAKE_C_STANDARD 11)
add_executable(myHomework3.12 zeroxor.c cmake-build-debug)

project(myHomework3.13 C)
set(CMAKE_C_STANDARD 11)
add_executable(myHomework3.13 ptrie.c cmake-build-debug)

project(myHomework3.6 C)
set(CMAKE_C_STANDARD 11)
add_executable(myHomework3.6 listisort.c cmake-build-debug)
